HVAC Backup 2/objects/Case_Issue_Type_and_Priority_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Customer__c</fullName>
        <label>Type Of Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Case Issue Type and Priority Mapping</label>
    <pluralLabel>Case Issue Type and Priority Mappings</pluralLabel>
</CustomObject>